# automate-shopee-affiliate-post

./: .env  .env.example  Dockerfile  README.md  agents.md  alembic.ini  design.md  docker-compose.yml  install.md  llms.txt  pyproject.toml
docs/: openclaw-local.md
migrations/: env.py
migrations/versions/: 0001_initial.py
openclaw/: local-ollama.json
prompts/analytics/: v1.0_user.txt
prompts/classifier/: v1.0_user.txt
prompts/content_writer/: v1.0_system.txt  v1.0_user.txt
prompts/reply_writer/: v1.0_system.txt  v1.0_user.txt
src/shopee_affiliate/: __init__.py  agents.py  celery_app.py  config.py  db.py  guardrails.py  integrations.py  llm.py  main.py  models.py  prompts.py  schemas.py  tasks.py
src/shopee_affiliate/static/: admin.js  style.css
src/shopee_affiliate/templates/: base.html  content.html  dashboard.html  engagement.html  posts.html  products.html  prompts.html
tests/: conftest.py  test_core.py  test_pipeline.py
