[project]
name = "shopee-affiliate-automation"
version = "0.1.0"
description = "Local-first Shopee affiliate automation with FastAPI, Celery, OpenClaw, and Ollama."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "celery>=5.4.0",
  "fastapi>=0.112.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "loguru>=0.7.2",
  "pillow>=10.4.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.5",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopee_affiliate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
warn_unused_ignores = false
exclude = ["alembic"]

